Add typescript, OSTB, and Uprising

--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -48,6 +48,7 @@
 
 @media screen and (min-width: 1200px) {
   #experience {
+    display: inline-grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
   }
